--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,18 @@
 			margin: 0px;
 			padding: 0px;
 		}
+
+		div.menu{
+    	position: fixed;
+    	margin: 0px;
+    	padding: 10px;
+    	top: 0px;
+    	right: 0px;
+    	width: 250px;
+    	height: 500px;
+    	background: rgba(255,255,255,.8);
+		}
+
 	</style>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -51,6 +63,13 @@
 	<div class="tooltip">
 		<p class="tooltip-text" id="title">This is the title</p>
 		<p class="tooltip-text" id="price">This is the price</p>
+	</div>
+	<div class="menu">
+    	<p><h4>DMC Web Stack</h4></p>
+    	<form>
+        	<p><input type="checkbox" id="heatmap">Heat Map</p>
+        	<p><input type="button" value="Update Data" onclick="updateData()"></p>
+    	</form>
 	</div>
 
 	<script type="text/javascript">
@@ -94,6 +113,7 @@
 		var transform = d3.geo.transform({point: projectStream});
 		var path = d3.geo.path().projection(transform);
 
+	  	function updateData(){
 	  	d3.json("/getData/", function(data) {
 
 			//create placeholder circle geometry and bind it to data
@@ -145,7 +165,7 @@
 			map.on("viewreset", update);
 
 		});
-
+		};
 	</script>
 
 </body>
